<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    android:orientation="vertical"
    tools:context="com.projectudacity.musicapp.activities.HomeActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/fade_background">

            <TextView
                style="@style/HomeOptions"
                android:gravity="center"
                android:text="@string/playlist_text"
                android:textSize="20sp" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/ah_rv_playlists"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/double_margin"
                android:layout_marginBottom="@dimen/default_margin"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingStart="@dimen/default_padding"
            android:paddingEnd="@dimen/default_padding"
            android:orientation="vertical">

            <TextView
                android:id="@+id/ah_tv_trends"
                style="@style/HomeOptions"
                android:drawableStart="@drawable/ic_trend"
                android:text="@string/trends" />

            <TextView
                android:id="@+id/ah_tv_news"
                style="@style/HomeOptions"
                android:drawableStart="@drawable/ic_new"
                android:text="@string/news" />

            <TextView
                android:id="@+id/ah_tv_songs"
                style="@style/HomeOptions"
                android:drawableStart="@drawable/ic_song"
                android:text="@string/songs" />

            <TextView
                android:id="@+id/ah_tv_albums"
                style="@style/HomeOptions"
                android:drawableStart="@drawable/ic_album"
                android:text="@string/albums" />

            <TextView
                android:id="@+id/ah_tv_artists"
                style="@style/HomeOptions"
                android:drawableStart="@drawable/ic_artist"
                android:text="@string/artists" />

        </LinearLayout>

    </LinearLayout>


</ScrollView>
